examples/test/testpolicy15033.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15033
  namespace: namespace89
spec:
  podSelector:
    matchLabels:
      key46: value42
      key2: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value19
          key7: value4
      podSelector:
        matchLabels:
          key41: value27
          key13: value6
          key27: value24
